# remc2

./: .gitignore  CMakeLists.txt  README.md
data/biggraphics/: bl128f0-0.data
libs/findfirst/: main  test_findfirst  test_spec
libs/kiss_sdl-master/: foo
src/: CMakeCache.txt  CMakeLists.txt  sub_main.cpp
src/editor/: editor.cpp  editor.h
src/engine/: Terrain.cpp  Terrain.h
src/portability/: port_sdl_vga_mouse.cpp
tools/compressTMAPS/: compressTMAPS.cpp
tools/convertpal/: convertpal.cpp
tools/decompresTmaps/: decompresTmaps.cpp
tools/decompressTMAPS/: decompressTMAPS.cpp
tools/palletelight/: palletelight.cpp
tools/test_cfs/: test_cfs.cpp
